--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,10 @@
 use_frameworks!
 
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 target 'Favoritos_Example' do
   pod 'Favoritos', :path => '../'
+  pod  'SnapKit' ,  '~> 5.0.0'
 
   target 'Favoritos_Tests' do
     inherit! :search_paths
